<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/task1.1"
        android:title="@string/task_1_1"
        app:showAsAction="never" />

    <item
        android:id="@+id/task1.2"
        android:title="@string/task_1_2"
        app:showAsAction="never" />

    <item
        android:id="@+id/task1.3"
        android:title="@string/task_1_3"
        app:showAsAction="never" />

    <item
        android:id="@+id/task1.4"
        android:title="@string/task_1_4"
        app:showAsAction="never" />

    <item
        android:id="@+id/task2.1"
        android:title="@string/task_2_1"
        app:showAsAction="never" />

    <item
        android:id="@+id/task2.1.codingChallenge"
        android:title="@string/task_2_1_cc"
        app:showAsAction="never" />

    <item
        android:id="@+id/task2.2.codingChallenge"
        android:title="@string/task_2_2_cc"
        app:showAsAction="never" />

    <item
        android:id="@+id/task2.2.homework"
        android:title="@string/task_2_2_homework"
        app:showAsAction="never" />

    <item
        android:id="@+id/task2.3"
        android:title="@string/task_2_3"
        app:showAsAction="never" />

    <item
        android:id="@+id/task2.3.receiver"
        android:title="@string/task_2_3_receiver"
        app:showAsAction="never" />

</menu>